"Reload from trusted" made me lose my work without prompting for save! #41462

Closed
opened 2014-08-16 14:21:25 +02:00 by J Kauth · 15 comments

I loaded a file from MakeHuman and started a session of sculpting.

After some time I noticed a warning button in the Info Panel that said something
about "import failed".

I clicked on the button (to see what it did) and it reset my file back to an original saved file.

I lost my sculpting session because it didn't prompt with anything like "Unsaved changes, are you sure?"

I loaded a file from MakeHuman and started a session of sculpting. After some time I noticed a warning button in the Info Panel that said something about "import failed". I clicked on the button (to see what it did) and it reset my file back to an original saved file. I lost my sculpting session because it didn't prompt with anything like "Unsaved changes, are you sure?"
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @jakester488

Added subscriber: @jakester488

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Bastien Montagne self-assigned this 2014-08-16 14:51:11 +02:00

Sorry for your lost work, but Blender makes general assumption user knows what he is doing when he opens/reloads a file. This quite obviously implies all non-saved work will be lost…

We know this may be frustrating in some occasions, but on the other hand it saves quite a bit of time not to always have to confirm actions in popups…

Sorry for your lost work, but Blender makes general assumption user knows what he is doing when he opens/reloads a file. This quite obviously implies all non-saved work will be lost… We know this may be frustrating in some occasions, but on the other hand it saves quite a bit of time not to always have to confirm actions in popups…

Added subscriber: @Luarvik

Added subscriber: @Luarvik

Jakester488, I would like to remind you that Blender is not developed for puny users who allow any mistakes in their workflow. And yes, losing your work is not enough to justify even one additional mouse click when you open-close projects.

P.S. But seriously, our dear developers, would it really be a great sin in your eyes to add an OPTION in the preferences to turn on/off "save file" confirmation?
I'm sure 90% of users would really appreciate it.
Oh, sorry, I forgot, no feature requests here! OK, forget about it...

Jakester488, I would like to remind you that Blender is not developed for puny users who allow any mistakes in their workflow. And yes, losing your work is not enough to justify even one additional mouse click when you open-close projects. P.S. But seriously, our dear developers, would it really be a great sin in your eyes to add an OPTION in the preferences to turn on/off "save file" confirmation? I'm sure 90% of users would really appreciate it. Oh, sorry, I forgot, no feature requests here! OK, forget about it...
Author

Well I'm quite shocked at how quickly and cavalierly this was closed...

First of all... it's a data loss bug. I can't think of any faster way to lose my job
as a sysadmin than by saying "Sorry, I didn't do the backups ... but hard drives
do die, so go away."

Please pardon my sarcasm, but the response is RIDICULOUS.

Not only that: the response is inconsistent with present Blender behavior: Blender DOES warn about unsaved changes when Quitting, or when I choose "File | New".

I would suggest this be re-opened. There is a deeper problem here if this is how
a legitimate bug is triaged.

Well I'm quite shocked at how quickly and cavalierly this was closed... First of all... it's a *data loss bug*. I can't think of any faster way to lose my job as a sysadmin than by saying "Sorry, I didn't do the backups ... but hard drives do die, so go away." Please pardon my sarcasm, but the response is RIDICULOUS. Not only that: the response is inconsistent with present Blender behavior: Blender DOES warn about unsaved changes when Quitting, or when I choose "File | New". I would suggest this be re-opened. There is a deeper problem here if this is how a legitimate bug is triaged.

Welcome to Blender bug tracker! ))
Generally, this feature was asked by many users since long time ago, but it seems that for some almost religious reasons devs always oppose to include it in Blender.
AFAIK only Windows version of Blender have an option to warn about unsaved changes when quitting. On Mac and Linux (which I am using) it doesn't at all. Yes, Blender automatically saves "quit.blend" file in temp directory. But this "solution" has at least one serious problem. Sometimes (especially when you work with many blend files) you can easily forget to save some changes made in one file and re-open other files thinking that those changes you made are saved. As a result, your quit.blend file will be replaced with new data. Such behavior provides a user with unnecessary anxiety to always remember and check to save his work. I think most of users would be happy if Blender could take upon itself to check and remind them to save their data if it might be lost.
Again this can be added as an OPTION, so those of you who are perfect and never do any mistakes can continue to completely rely on yourselves while most of other "stupid" users (including me) can use Blender's help to avoid losing their work.

Welcome to Blender bug tracker! )) Generally, this feature was asked by many users since long time ago, but it seems that for some almost religious reasons devs always oppose to include it in Blender. AFAIK only Windows version of Blender have an option to warn about unsaved changes when quitting. On Mac and Linux (which I am using) it doesn't at all. Yes, Blender automatically saves "quit.blend" file in temp directory. But this "solution" has at least one serious problem. Sometimes (especially when you work with many blend files) you can easily forget to save some changes made in one file and re-open other files thinking that those changes you made are saved. As a result, your quit.blend file will be replaced with new data. Such behavior provides a user with unnecessary anxiety to always remember and check to save his work. I think most of users would be happy if Blender could take upon itself to check and remind them to save their data if it might be lost. Again this can be added as an OPTION, so those of you who are perfect and never do any mistakes can continue to completely rely on yourselves while most of other "stupid" users (including me) can use Blender's help to avoid losing their work.

This issue was referenced by 71ce415f4a

This issue was referenced by 71ce415f4a48cf8915ba921594c96c09b54191a3

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'

Closed by commit 71ce415f4a.

Closed by commit 71ce415f4a.

My bad, that op was missing a popup, fixed now… Which does not mean that ranting was needed, please try to be less childish in future.

My bad, that op was missing a popup, fixed now… Which does not mean that ranting was needed, please try to be less childish in future.

Thank you very much! Our "childish" comments (as you called it) in the end did encourage you to pay a little more attention to this issue and finally fix it. Please understand, this is the only weapon we have to penetrate the wall of indifference and melt developers' cold, cold hearts. ;-)

Thank you very much! Our "childish" comments (as you called it) in the end did encourage you to pay a little more attention to this issue and finally fix it. Please understand, this is the only weapon we have to penetrate the wall of indifference and melt developers' cold, cold hearts. ;-)
Author

Mont29 thanks for you kind fix, and I'm sorry if my comments came across as too pushy.

Luarvik: your comments could be considered a bit harsh... There is some validity in that yes the developers of blender hold inordinate power to make or break a change before it is ever born, as they are mostly volunteers, and getting them to take your opinion about a change is the first step.

I spent some time looking around the internet and found that there are (too) many ways to suggest features; there is also a lot of discussion about WHY there are so many ways to get features in... it has to do once again with the fact that it's mostly volunteer based work and so KIND COMMUNICATION is the key, otherwise you just piss off the devs.

So anyways thanks Bastien :)

http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo

http://wiki.blender.org/index.php/Dev:Doc/Contact#Requesting_Features

http://wiki.blender.org/index.php/Dev:Doc/Tools/Patches

http://www.blender.org/forum/viewtopic.php?t=22633&view=previous&sid=464c9e6cdacdd50fd054107d0c9e15db

http://www.blender.org/forum/viewtopic.php?t=5265&postdays=0&postorder=asc&start=15

http://blender.stackexchange.com/questions/1190/best-place-to-put-feature-requests

http://blenderartists.org/forum/showthread.php?247532-Where-is-Blender-feedback-and-feature-requests

http://wiki.blender.org/index.php/User:Ideasman42/HowToGetFeaturesIntoBlender

Mont29 thanks for you kind fix, and I'm sorry if my comments came across as too pushy. Luarvik: your comments could be considered a bit harsh... There is some validity in that yes the developers of blender hold inordinate power to make or break a change before it is ever born, as they are mostly volunteers, and getting them to take your opinion about a change is the first step. I spent some time looking around the internet and found that there are (too) **many** ways to suggest features; there is also a lot of discussion about WHY there are so many ways to get features in... it has to do once again with the fact that it's mostly volunteer based work and so KIND COMMUNICATION is the key, otherwise you just piss off the devs. So anyways thanks Bastien :) http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo http://wiki.blender.org/index.php/Dev:Doc/Contact#Requesting_Features http://wiki.blender.org/index.php/Dev:Doc/Tools/Patches http://www.blender.org/forum/viewtopic.php?t=22633&view=previous&sid=464c9e6cdacdd50fd054107d0c9e15db http://www.blender.org/forum/viewtopic.php?t=5265&postdays=0&postorder=asc&start=15 http://blender.stackexchange.com/questions/1190/best-place-to-put-feature-requests http://blenderartists.org/forum/showthread.php?247532-Where-is-Blender-feedback-and-feature-requests http://wiki.blender.org/index.php/User:Ideasman42/HowToGetFeaturesIntoBlender

Jakester, first of all I completely agree that KIND COMMUNICATION is good. And I myself don't enjoy to speak harshly to our very appreciated (no sarcasm here!) developers. But ironically, if we both had used nice and humble language (which you actually did), then this report would continue to be closed as invalid and this problem wouldn't be fixed.

I know this, because I have witnessed others and myself experienced similar situations. In a similar manner a formal, but as you properly noted, RIDICULOUS response is given and bug report is quickly closed as invalid. All KIND and POLITE efforts to get a little more explanation or discussion on the topic are completely ignored.

I am not expecting developers to agree with every users' opinion and suggestion, but I would like to encourage them not to treat users as a dumb cattle.

P.S. In my comments I wasn't really harsh, rather satirical. I apologize if I offended someone. I don't disrespect Bastien or any other developers, I just tried to give them an adequate feedback.

Best regards to all devs.

Jakester, first of all I completely agree that KIND COMMUNICATION is good. And I myself don't enjoy to speak harshly to our very appreciated (no sarcasm here!) developers. But ironically, if we both had used nice and humble language (which you actually did), then this report would continue to be closed as invalid and this problem wouldn't be fixed. I know this, because I have witnessed others and myself experienced similar situations. In a similar manner a formal, but as you properly noted, RIDICULOUS response is given and bug report is quickly closed as invalid. All KIND and POLITE efforts to get a little more explanation or discussion on the topic are completely ignored. I am not expecting developers to agree with every users' opinion and suggestion, but I would like to encourage them not to treat users as a dumb cattle. P.S. In my comments I wasn't really harsh, rather satirical. I apologize if I offended someone. I don't disrespect Bastien or any other developers, I just tried to give them an adequate feedback. Best regards to all devs.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41462
No description provided.