Fix T41462: "Reload from trusted" button not prompting for confirmation.

Made 'revert_mainfile' op also handle the 'use scripts' option, and use it
for this feature (since it has a nice simple invoke confirmation popup).